--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,32 @@ main .card:hover {
   width: 300px;
 }
 
+.unclickable {
+  all: unset;
+}
+
+.unclickable:hover {
+  all: unset;
+}
+
+.score {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.score>div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.score>div p {
+  font-size: 24px;
+}
+
 @media (min-width: 600px) {
   aside {
     height: 6vh;
