imrpoving style and game experience

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: auto;
+  background-color: #3d3d3d;
 }
 
 code {
