--- a/src/App.css
+++ b/src/App.css
@@ -69,11 +69,11 @@ main .card:hover {
 }
 
 .unclickable {
-  all: unset;
+  all: unset !important;
 }
 
 .unclickable:hover {
-  all: unset;
+  all: unset !important;
 }
 
 .score {
@@ -88,6 +88,7 @@ main .card:hover {
   align-items: center;
   justify-content: center;
   gap: 10px;
+  color: #FFF;
 }
 
 .score>div p {
