--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ aside {
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   padding: 10px;
   width: 100%;
-  height: 5vh;
+  height: fit-content;
 }
 
 aside button {
